themesdir = $(pkgdatadir)/themes
themes_DATA = transparent-background \
	      example_theme \
	      nightly_theme \
	      red_theme \
	      blue_theme \
	      green_theme \
	      white_theme \
	      black_theme \
	      black_orange_theme \
	      yellow_red_theme \
	      moca_theme \
	      darkdot_theme

EXTRA_DIST = $(themes_DATA)
